Analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ID
    LS

Grammar

Rule 0     S' -> init
Rule 1     init -> list_commands
Rule 2     list_commands -> list_commands commands
Rule 3     list_commands -> commands
Rule 4     commands -> command_execute
Rule 5     commands -> command_mkdisk
Rule 6     commands -> command_rmdisk
Rule 7     commands -> command_fdisk
Rule 8     commands -> command_mount
Rule 9     commands -> command_unmount
Rule 10    commands -> command_mkfs
Rule 11    commands -> command_login
Rule 12    commands -> command_logout
Rule 13    commands -> command_mkgrp
Rule 14    commands -> command_rmgrp
Rule 15    commands -> command_mkusr
Rule 16    commands -> command_rmusr
Rule 17    commands -> command_mkfile
Rule 18    commands -> command_cat
Rule 19    commands -> command_rep
Rule 20    command_execute -> EXECUTE GUION PATH IGUAL CADENA
Rule 21    command_mkdisk -> MKDISK parameters_mkdisk
Rule 22    parameters_mkdisk -> parameters_mkdisk parameter_mkdisk
Rule 23    parameters_mkdisk -> parameter_mkdisk
Rule 24    parameter_mkdisk -> param_size
Rule 25    parameter_mkdisk -> param_path
Rule 26    parameter_mkdisk -> param_unit
Rule 27    parameter_mkdisk -> param_fit
Rule 28    command_rmdisk -> RMDISK GUION PATH IGUAL CADENA
Rule 29    command_fdisk -> FDISK parameters_fdisk
Rule 30    parameters_fdisk -> parameters_fdisk parameter_fdisk
Rule 31    parameters_fdisk -> parameter_fdisk
Rule 32    parameter_fdisk -> param_size
Rule 33    parameter_fdisk -> param_path
Rule 34    parameter_fdisk -> param_unit
Rule 35    parameter_fdisk -> param_name
Rule 36    parameter_fdisk -> param_type
Rule 37    parameter_fdisk -> param_fit
Rule 38    parameter_fdisk -> param_delete
Rule 39    parameter_fdisk -> param_add
Rule 40    command_mount -> MOUNT parameters_mount
Rule 41    parameters_mount -> parameters_mount parameter_mount
Rule 42    parameters_mount -> parameter_mount
Rule 43    parameter_mount -> param_path
Rule 44    parameter_mount -> param_name
Rule 45    command_unmount -> UNMOUNT GUION ID_DISK IGUAL CADENA
Rule 46    command_mkfs -> MKFS parameters_mkfs
Rule 47    parameters_mkfs -> parameters_mkfs parameter_mkfs
Rule 48    parameters_mkfs -> parameter_mkfs
Rule 49    parameter_mkfs -> param_id
Rule 50    parameter_mkfs -> param_type
Rule 51    parameter_mkfs -> param_fs
Rule 52    command_login -> LOGIN parameters_login
Rule 53    parameters_login -> parameters_login parameter_login
Rule 54    parameters_login -> parameter_login
Rule 55    parameter_login -> param_user
Rule 56    parameter_login -> param_password
Rule 57    parameter_login -> param_id
Rule 58    command_logout -> LOGOUT
Rule 59    command_mkgrp -> MKGRP GUION NAME IGUAL CADENA
Rule 60    command_rmgrp -> RMGRP GUION NAME IGUAL CADENA
Rule 61    command_mkusr -> MKUSR parameters_mkusr
Rule 62    parameters_mkusr -> parameters_mkusr parameter_mkusr
Rule 63    parameters_mkusr -> parameter_mkusr
Rule 64    parameter_mkusr -> param_user
Rule 65    parameter_mkusr -> param_password
Rule 66    parameter_mkusr -> param_grp
Rule 67    command_rmusr -> RMUSR GUION USER IGUAL CADENA
Rule 68    command_mkfile -> MKFILE parameters_mkfile
Rule 69    parameters_mkfile -> parameters_mkfile parameter_mkfile
Rule 70    parameters_mkfile -> parameter_mkfile
Rule 71    parameter_mkfile -> param_path
Rule 72    parameter_mkfile -> param_r
Rule 73    parameter_mkfile -> param_size
Rule 74    parameter_mkfile -> param_cont
Rule 75    command_cat -> CAT parameters_cat
Rule 76    parameters_cat -> parameters_cat parameter_cat
Rule 77    parameters_cat -> parameter_cat
Rule 78    parameter_cat -> param_file
Rule 79    command_rep -> REP parameters_rep
Rule 80    parameters_rep -> parameters_rep parameter_rep
Rule 81    parameters_rep -> parameter_rep
Rule 82    parameter_rep -> param_name_rep
Rule 83    parameter_rep -> param_path
Rule 84    parameter_rep -> param_id
Rule 85    parameter_rep -> param_r
Rule 86    param_name_rep -> GUION NAME IGUAL MBR
Rule 87    param_name_rep -> GUION NAME IGUAL DISK
Rule 88    param_name_rep -> GUION NAME IGUAL INODE
Rule 89    param_name_rep -> GUION NAME IGUAL JOURNALING
Rule 90    param_name_rep -> GUION NAME IGUAL BLOCK
Rule 91    param_name_rep -> GUION NAME IGUAL BM_INODE
Rule 92    param_name_rep -> GUION NAME IGUAL BM_BLOCK
Rule 93    param_name_rep -> GUION NAME IGUAL TREE
Rule 94    param_name_rep -> GUION NAME IGUAL SB
Rule 95    param_name_rep -> GUION NAME IGUAL FILE
Rule 96    param_ruta -> GUION RUTA IGUAL CADENA
Rule 97    param_size -> GUION SIZE IGUAL ENTERO
Rule 98    param_path -> GUION PATH IGUAL CADENA
Rule 99    param_unit -> GUION UNIT IGUAL UNIDAD
Rule 100   param_fit -> GUION FIT IGUAL FITSYM
Rule 101   param_name -> GUION NAME IGUAL CADENA
Rule 102   param_type -> GUION TYPE IGUAL TIPO
Rule 103   param_type -> GUION TYPE IGUAL FULL
Rule 104   param_delete -> GUION DELETE IGUAL FULL
Rule 105   param_add -> GUION ADD IGUAL ENTERO
Rule 106   param_id -> GUION ID_DISK IGUAL CADENA
Rule 107   param_fs -> GUION FS_DISK IGUAL FS
Rule 108   param_user -> GUION USER IGUAL CADENA
Rule 109   param_password -> GUION PASSWORD IGUAL CADENA
Rule 110   param_grp -> GUION GRP IGUAL CADENA
Rule 111   param_r -> GUION ERRE
Rule 112   param_cont -> GUION CONT IGUAL CADENA
Rule 113   param_file -> GUION FILE ENTERO IGUAL CADENA

Terminals, with rules where they appear

ADD                  : 105
BLOCK                : 90
BM_BLOCK             : 92
BM_INODE             : 91
CADENA               : 20 28 45 59 60 67 96 98 101 106 108 109 110 112 113
CAT                  : 75
CONT                 : 112
DELETE               : 104
DISK                 : 87
ENTERO               : 97 105 113
ERRE                 : 111
EXECUTE              : 20
FDISK                : 29
FILE                 : 95 113
FIT                  : 100
FITSYM               : 100
FS                   : 107
FS_DISK              : 107
FULL                 : 103 104
GRP                  : 110
GUION                : 20 28 45 59 60 67 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
ID                   : 
ID_DISK              : 45 106
IGUAL                : 20 28 45 59 60 67 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 112 113
INODE                : 88
JOURNALING           : 89
LOGIN                : 52
LOGOUT               : 58
LS                   : 
MBR                  : 86
MKDISK               : 21
MKFILE               : 68
MKFS                 : 46
MKGRP                : 59
MKUSR                : 61
MOUNT                : 40
NAME                 : 59 60 86 87 88 89 90 91 92 93 94 95 101
PASSWORD             : 109
PATH                 : 20 28 98
REP                  : 79
RMDISK               : 28
RMGRP                : 60
RMUSR                : 67
RUTA                 : 96
SB                   : 94
SIZE                 : 97
TIPO                 : 102
TREE                 : 93
TYPE                 : 102 103
UNIDAD               : 99
UNIT                 : 99
UNMOUNT              : 45
USER                 : 67 108
error                : 

Nonterminals, with rules where they appear

command_cat          : 18
command_execute      : 4
command_fdisk        : 7
command_login        : 11
command_logout       : 12
command_mkdisk       : 5
command_mkfile       : 17
command_mkfs         : 10
command_mkgrp        : 13
command_mkusr        : 15
command_mount        : 8
command_rep          : 19
command_rmdisk       : 6
command_rmgrp        : 14
command_rmusr        : 16
command_unmount      : 9
commands             : 2 3
init                 : 0
list_commands        : 1 2
param_add            : 39
param_cont           : 74
param_delete         : 38
param_file           : 78
param_fit            : 27 37
param_fs             : 51
param_grp            : 66
param_id             : 49 57 84
param_name           : 35 44
param_name_rep       : 82
param_password       : 56 65
param_path           : 25 33 43 71 83
param_r              : 72 85
param_ruta           : 
param_size           : 24 32 73
param_type           : 36 50
param_unit           : 26 34
param_user           : 55 64
parameter_cat        : 76 77
parameter_fdisk      : 30 31
parameter_login      : 53 54
parameter_mkdisk     : 22 23
parameter_mkfile     : 69 70
parameter_mkfs       : 47 48
parameter_mkusr      : 62 63
parameter_mount      : 41 42
parameter_rep        : 80 81
parameters_cat       : 75 76
parameters_fdisk     : 29 30
parameters_login     : 52 53
parameters_mkdisk    : 21 22
parameters_mkfile    : 68 69
parameters_mkfs      : 46 47
parameters_mkusr     : 61 62
parameters_mount     : 40 41
parameters_rep       : 79 80

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . list_commands
    (2) list_commands -> . list_commands commands
    (3) list_commands -> . commands
    (4) commands -> . command_execute
    (5) commands -> . command_mkdisk
    (6) commands -> . command_rmdisk
    (7) commands -> . command_fdisk
    (8) commands -> . command_mount
    (9) commands -> . command_unmount
    (10) commands -> . command_mkfs
    (11) commands -> . command_login
    (12) commands -> . command_logout
    (13) commands -> . command_mkgrp
    (14) commands -> . command_rmgrp
    (15) commands -> . command_mkusr
    (16) commands -> . command_rmusr
    (17) commands -> . command_mkfile
    (18) commands -> . command_cat
    (19) commands -> . command_rep
    (20) command_execute -> . EXECUTE GUION PATH IGUAL CADENA
    (21) command_mkdisk -> . MKDISK parameters_mkdisk
    (28) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (29) command_fdisk -> . FDISK parameters_fdisk
    (40) command_mount -> . MOUNT parameters_mount
    (45) command_unmount -> . UNMOUNT GUION ID_DISK IGUAL CADENA
    (46) command_mkfs -> . MKFS parameters_mkfs
    (52) command_login -> . LOGIN parameters_login
    (58) command_logout -> . LOGOUT
    (59) command_mkgrp -> . MKGRP GUION NAME IGUAL CADENA
    (60) command_rmgrp -> . RMGRP GUION NAME IGUAL CADENA
    (61) command_mkusr -> . MKUSR parameters_mkusr
    (67) command_rmusr -> . RMUSR GUION USER IGUAL CADENA
    (68) command_mkfile -> . MKFILE parameters_mkfile
    (75) command_cat -> . CAT parameters_cat
    (79) command_rep -> . REP parameters_rep

    EXECUTE         shift and go to state 20
    MKDISK          shift and go to state 21
    RMDISK          shift and go to state 22
    FDISK           shift and go to state 23
    MOUNT           shift and go to state 24
    UNMOUNT         shift and go to state 25
    MKFS            shift and go to state 26
    LOGIN           shift and go to state 27
    LOGOUT          shift and go to state 28
    MKGRP           shift and go to state 29
    RMGRP           shift and go to state 30
    MKUSR           shift and go to state 31
    RMUSR           shift and go to state 32
    MKFILE          shift and go to state 33
    CAT             shift and go to state 34
    REP             shift and go to state 35

    init                           shift and go to state 1
    list_commands                  shift and go to state 2
    commands                       shift and go to state 3
    command_execute                shift and go to state 4
    command_mkdisk                 shift and go to state 5
    command_rmdisk                 shift and go to state 6
    command_fdisk                  shift and go to state 7
    command_mount                  shift and go to state 8
    command_unmount                shift and go to state 9
    command_mkfs                   shift and go to state 10
    command_login                  shift and go to state 11
    command_logout                 shift and go to state 12
    command_mkgrp                  shift and go to state 13
    command_rmgrp                  shift and go to state 14
    command_mkusr                  shift and go to state 15
    command_rmusr                  shift and go to state 16
    command_mkfile                 shift and go to state 17
    command_cat                    shift and go to state 18
    command_rep                    shift and go to state 19

state 1

    (0) S' -> init .



state 2

    (1) init -> list_commands .
    (2) list_commands -> list_commands . commands
    (4) commands -> . command_execute
    (5) commands -> . command_mkdisk
    (6) commands -> . command_rmdisk
    (7) commands -> . command_fdisk
    (8) commands -> . command_mount
    (9) commands -> . command_unmount
    (10) commands -> . command_mkfs
    (11) commands -> . command_login
    (12) commands -> . command_logout
    (13) commands -> . command_mkgrp
    (14) commands -> . command_rmgrp
    (15) commands -> . command_mkusr
    (16) commands -> . command_rmusr
    (17) commands -> . command_mkfile
    (18) commands -> . command_cat
    (19) commands -> . command_rep
    (20) command_execute -> . EXECUTE GUION PATH IGUAL CADENA
    (21) command_mkdisk -> . MKDISK parameters_mkdisk
    (28) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (29) command_fdisk -> . FDISK parameters_fdisk
    (40) command_mount -> . MOUNT parameters_mount
    (45) command_unmount -> . UNMOUNT GUION ID_DISK IGUAL CADENA
    (46) command_mkfs -> . MKFS parameters_mkfs
    (52) command_login -> . LOGIN parameters_login
    (58) command_logout -> . LOGOUT
    (59) command_mkgrp -> . MKGRP GUION NAME IGUAL CADENA
    (60) command_rmgrp -> . RMGRP GUION NAME IGUAL CADENA
    (61) command_mkusr -> . MKUSR parameters_mkusr
    (67) command_rmusr -> . RMUSR GUION USER IGUAL CADENA
    (68) command_mkfile -> . MKFILE parameters_mkfile
    (75) command_cat -> . CAT parameters_cat
    (79) command_rep -> . REP parameters_rep

    $end            reduce using rule 1 (init -> list_commands .)
    EXECUTE         shift and go to state 20
    MKDISK          shift and go to state 21
    RMDISK          shift and go to state 22
    FDISK           shift and go to state 23
    MOUNT           shift and go to state 24
    UNMOUNT         shift and go to state 25
    MKFS            shift and go to state 26
    LOGIN           shift and go to state 27
    LOGOUT          shift and go to state 28
    MKGRP           shift and go to state 29
    RMGRP           shift and go to state 30
    MKUSR           shift and go to state 31
    RMUSR           shift and go to state 32
    MKFILE          shift and go to state 33
    CAT             shift and go to state 34
    REP             shift and go to state 35

    commands                       shift and go to state 36
    command_execute                shift and go to state 4
    command_mkdisk                 shift and go to state 5
    command_rmdisk                 shift and go to state 6
    command_fdisk                  shift and go to state 7
    command_mount                  shift and go to state 8
    command_unmount                shift and go to state 9
    command_mkfs                   shift and go to state 10
    command_login                  shift and go to state 11
    command_logout                 shift and go to state 12
    command_mkgrp                  shift and go to state 13
    command_rmgrp                  shift and go to state 14
    command_mkusr                  shift and go to state 15
    command_rmusr                  shift and go to state 16
    command_mkfile                 shift and go to state 17
    command_cat                    shift and go to state 18
    command_rep                    shift and go to state 19

state 3

    (3) list_commands -> commands .

    EXECUTE         reduce using rule 3 (list_commands -> commands .)
    MKDISK          reduce using rule 3 (list_commands -> commands .)
    RMDISK          reduce using rule 3 (list_commands -> commands .)
    FDISK           reduce using rule 3 (list_commands -> commands .)
    MOUNT           reduce using rule 3 (list_commands -> commands .)
    UNMOUNT         reduce using rule 3 (list_commands -> commands .)
    MKFS            reduce using rule 3 (list_commands -> commands .)
    LOGIN           reduce using rule 3 (list_commands -> commands .)
    LOGOUT          reduce using rule 3 (list_commands -> commands .)
    MKGRP           reduce using rule 3 (list_commands -> commands .)
    RMGRP           reduce using rule 3 (list_commands -> commands .)
    MKUSR           reduce using rule 3 (list_commands -> commands .)
    RMUSR           reduce using rule 3 (list_commands -> commands .)
    MKFILE          reduce using rule 3 (list_commands -> commands .)
    CAT             reduce using rule 3 (list_commands -> commands .)
    REP             reduce using rule 3 (list_commands -> commands .)
    $end            reduce using rule 3 (list_commands -> commands .)


state 4

    (4) commands -> command_execute .

    EXECUTE         reduce using rule 4 (commands -> command_execute .)
    MKDISK          reduce using rule 4 (commands -> command_execute .)
    RMDISK          reduce using rule 4 (commands -> command_execute .)
    FDISK           reduce using rule 4 (commands -> command_execute .)
    MOUNT           reduce using rule 4 (commands -> command_execute .)
    UNMOUNT         reduce using rule 4 (commands -> command_execute .)
    MKFS            reduce using rule 4 (commands -> command_execute .)
    LOGIN           reduce using rule 4 (commands -> command_execute .)
    LOGOUT          reduce using rule 4 (commands -> command_execute .)
    MKGRP           reduce using rule 4 (commands -> command_execute .)
    RMGRP           reduce using rule 4 (commands -> command_execute .)
    MKUSR           reduce using rule 4 (commands -> command_execute .)
    RMUSR           reduce using rule 4 (commands -> command_execute .)
    MKFILE          reduce using rule 4 (commands -> command_execute .)
    CAT             reduce using rule 4 (commands -> command_execute .)
    REP             reduce using rule 4 (commands -> command_execute .)
    $end            reduce using rule 4 (commands -> command_execute .)


state 5

    (5) commands -> command_mkdisk .

    EXECUTE         reduce using rule 5 (commands -> command_mkdisk .)
    MKDISK          reduce using rule 5 (commands -> command_mkdisk .)
    RMDISK          reduce using rule 5 (commands -> command_mkdisk .)
    FDISK           reduce using rule 5 (commands -> command_mkdisk .)
    MOUNT           reduce using rule 5 (commands -> command_mkdisk .)
    UNMOUNT         reduce using rule 5 (commands -> command_mkdisk .)
    MKFS            reduce using rule 5 (commands -> command_mkdisk .)
    LOGIN           reduce using rule 5 (commands -> command_mkdisk .)
    LOGOUT          reduce using rule 5 (commands -> command_mkdisk .)
    MKGRP           reduce using rule 5 (commands -> command_mkdisk .)
    RMGRP           reduce using rule 5 (commands -> command_mkdisk .)
    MKUSR           reduce using rule 5 (commands -> command_mkdisk .)
    RMUSR           reduce using rule 5 (commands -> command_mkdisk .)
    MKFILE          reduce using rule 5 (commands -> command_mkdisk .)
    CAT             reduce using rule 5 (commands -> command_mkdisk .)
    REP             reduce using rule 5 (commands -> command_mkdisk .)
    $end            reduce using rule 5 (commands -> command_mkdisk .)


state 6

    (6) commands -> command_rmdisk .

    EXECUTE         reduce using rule 6 (commands -> command_rmdisk .)
    MKDISK          reduce using rule 6 (commands -> command_rmdisk .)
    RMDISK          reduce using rule 6 (commands -> command_rmdisk .)
    FDISK           reduce using rule 6 (commands -> command_rmdisk .)
    MOUNT           reduce using rule 6 (commands -> command_rmdisk .)
    UNMOUNT         reduce using rule 6 (commands -> command_rmdisk .)
    MKFS            reduce using rule 6 (commands -> command_rmdisk .)
    LOGIN           reduce using rule 6 (commands -> command_rmdisk .)
    LOGOUT          reduce using rule 6 (commands -> command_rmdisk .)
    MKGRP           reduce using rule 6 (commands -> command_rmdisk .)
    RMGRP           reduce using rule 6 (commands -> command_rmdisk .)
    MKUSR           reduce using rule 6 (commands -> command_rmdisk .)
    RMUSR           reduce using rule 6 (commands -> command_rmdisk .)
    MKFILE          reduce using rule 6 (commands -> command_rmdisk .)
    CAT             reduce using rule 6 (commands -> command_rmdisk .)
    REP             reduce using rule 6 (commands -> command_rmdisk .)
    $end            reduce using rule 6 (commands -> command_rmdisk .)


state 7

    (7) commands -> command_fdisk .

    EXECUTE         reduce using rule 7 (commands -> command_fdisk .)
    MKDISK          reduce using rule 7 (commands -> command_fdisk .)
    RMDISK          reduce using rule 7 (commands -> command_fdisk .)
    FDISK           reduce using rule 7 (commands -> command_fdisk .)
    MOUNT           reduce using rule 7 (commands -> command_fdisk .)
    UNMOUNT         reduce using rule 7 (commands -> command_fdisk .)
    MKFS            reduce using rule 7 (commands -> command_fdisk .)
    LOGIN           reduce using rule 7 (commands -> command_fdisk .)
    LOGOUT          reduce using rule 7 (commands -> command_fdisk .)
    MKGRP           reduce using rule 7 (commands -> command_fdisk .)
    RMGRP           reduce using rule 7 (commands -> command_fdisk .)
    MKUSR           reduce using rule 7 (commands -> command_fdisk .)
    RMUSR           reduce using rule 7 (commands -> command_fdisk .)
    MKFILE          reduce using rule 7 (commands -> command_fdisk .)
    CAT             reduce using rule 7 (commands -> command_fdisk .)
    REP             reduce using rule 7 (commands -> command_fdisk .)
    $end            reduce using rule 7 (commands -> command_fdisk .)


state 8

    (8) commands -> command_mount .

    EXECUTE         reduce using rule 8 (commands -> command_mount .)
    MKDISK          reduce using rule 8 (commands -> command_mount .)
    RMDISK          reduce using rule 8 (commands -> command_mount .)
    FDISK           reduce using rule 8 (commands -> command_mount .)
    MOUNT           reduce using rule 8 (commands -> command_mount .)
    UNMOUNT         reduce using rule 8 (commands -> command_mount .)
    MKFS            reduce using rule 8 (commands -> command_mount .)
    LOGIN           reduce using rule 8 (commands -> command_mount .)
    LOGOUT          reduce using rule 8 (commands -> command_mount .)
    MKGRP           reduce using rule 8 (commands -> command_mount .)
    RMGRP           reduce using rule 8 (commands -> command_mount .)
    MKUSR           reduce using rule 8 (commands -> command_mount .)
    RMUSR           reduce using rule 8 (commands -> command_mount .)
    MKFILE          reduce using rule 8 (commands -> command_mount .)
    CAT             reduce using rule 8 (commands -> command_mount .)
    REP             reduce using rule 8 (commands -> command_mount .)
    $end            reduce using rule 8 (commands -> command_mount .)


state 9

    (9) commands -> command_unmount .

    EXECUTE         reduce using rule 9 (commands -> command_unmount .)
    MKDISK          reduce using rule 9 (commands -> command_unmount .)
    RMDISK          reduce using rule 9 (commands -> command_unmount .)
    FDISK           reduce using rule 9 (commands -> command_unmount .)
    MOUNT           reduce using rule 9 (commands -> command_unmount .)
    UNMOUNT         reduce using rule 9 (commands -> command_unmount .)
    MKFS            reduce using rule 9 (commands -> command_unmount .)
    LOGIN           reduce using rule 9 (commands -> command_unmount .)
    LOGOUT          reduce using rule 9 (commands -> command_unmount .)
    MKGRP           reduce using rule 9 (commands -> command_unmount .)
    RMGRP           reduce using rule 9 (commands -> command_unmount .)
    MKUSR           reduce using rule 9 (commands -> command_unmount .)
    RMUSR           reduce using rule 9 (commands -> command_unmount .)
    MKFILE          reduce using rule 9 (commands -> command_unmount .)
    CAT             reduce using rule 9 (commands -> command_unmount .)
    REP             reduce using rule 9 (commands -> command_unmount .)
    $end            reduce using rule 9 (commands -> command_unmount .)


state 10

    (10) commands -> command_mkfs .

    EXECUTE         reduce using rule 10 (commands -> command_mkfs .)
    MKDISK          reduce using rule 10 (commands -> command_mkfs .)
    RMDISK          reduce using rule 10 (commands -> command_mkfs .)
    FDISK           reduce using rule 10 (commands -> command_mkfs .)
    MOUNT           reduce using rule 10 (commands -> command_mkfs .)
    UNMOUNT         reduce using rule 10 (commands -> command_mkfs .)
    MKFS            reduce using rule 10 (commands -> command_mkfs .)
    LOGIN           reduce using rule 10 (commands -> command_mkfs .)
    LOGOUT          reduce using rule 10 (commands -> command_mkfs .)
    MKGRP           reduce using rule 10 (commands -> command_mkfs .)
    RMGRP           reduce using rule 10 (commands -> command_mkfs .)
    MKUSR           reduce using rule 10 (commands -> command_mkfs .)
    RMUSR           reduce using rule 10 (commands -> command_mkfs .)
    MKFILE          reduce using rule 10 (commands -> command_mkfs .)
    CAT             reduce using rule 10 (commands -> command_mkfs .)
    REP             reduce using rule 10 (commands -> command_mkfs .)
    $end            reduce using rule 10 (commands -> command_mkfs .)


state 11

    (11) commands -> command_login .

    EXECUTE         reduce using rule 11 (commands -> command_login .)
    MKDISK          reduce using rule 11 (commands -> command_login .)
    RMDISK          reduce using rule 11 (commands -> command_login .)
    FDISK           reduce using rule 11 (commands -> command_login .)
    MOUNT           reduce using rule 11 (commands -> command_login .)
    UNMOUNT         reduce using rule 11 (commands -> command_login .)
    MKFS            reduce using rule 11 (commands -> command_login .)
    LOGIN           reduce using rule 11 (commands -> command_login .)
    LOGOUT          reduce using rule 11 (commands -> command_login .)
    MKGRP           reduce using rule 11 (commands -> command_login .)
    RMGRP           reduce using rule 11 (commands -> command_login .)
    MKUSR           reduce using rule 11 (commands -> command_login .)
    RMUSR           reduce using rule 11 (commands -> command_login .)
    MKFILE          reduce using rule 11 (commands -> command_login .)
    CAT             reduce using rule 11 (commands -> command_login .)
    REP             reduce using rule 11 (commands -> command_login .)
    $end            reduce using rule 11 (commands -> command_login .)


state 12

    (12) commands -> command_logout .

    EXECUTE         reduce using rule 12 (commands -> command_logout .)
    MKDISK          reduce using rule 12 (commands -> command_logout .)
    RMDISK          reduce using rule 12 (commands -> command_logout .)
    FDISK           reduce using rule 12 (commands -> command_logout .)
    MOUNT           reduce using rule 12 (commands -> command_logout .)
    UNMOUNT         reduce using rule 12 (commands -> command_logout .)
    MKFS            reduce using rule 12 (commands -> command_logout .)
    LOGIN           reduce using rule 12 (commands -> command_logout .)
    LOGOUT          reduce using rule 12 (commands -> command_logout .)
    MKGRP           reduce using rule 12 (commands -> command_logout .)
    RMGRP           reduce using rule 12 (commands -> command_logout .)
    MKUSR           reduce using rule 12 (commands -> command_logout .)
    RMUSR           reduce using rule 12 (commands -> command_logout .)
    MKFILE          reduce using rule 12 (commands -> command_logout .)
    CAT             reduce using rule 12 (commands -> command_logout .)
    REP             reduce using rule 12 (commands -> command_logout .)
    $end            reduce using rule 12 (commands -> command_logout .)


state 13

    (13) commands -> command_mkgrp .

    EXECUTE         reduce using rule 13 (commands -> command_mkgrp .)
    MKDISK          reduce using rule 13 (commands -> command_mkgrp .)
    RMDISK          reduce using rule 13 (commands -> command_mkgrp .)
    FDISK           reduce using rule 13 (commands -> command_mkgrp .)
    MOUNT           reduce using rule 13 (commands -> command_mkgrp .)
    UNMOUNT         reduce using rule 13 (commands -> command_mkgrp .)
    MKFS            reduce using rule 13 (commands -> command_mkgrp .)
    LOGIN           reduce using rule 13 (commands -> command_mkgrp .)
    LOGOUT          reduce using rule 13 (commands -> command_mkgrp .)
    MKGRP           reduce using rule 13 (commands -> command_mkgrp .)
    RMGRP           reduce using rule 13 (commands -> command_mkgrp .)
    MKUSR           reduce using rule 13 (commands -> command_mkgrp .)
    RMUSR           reduce using rule 13 (commands -> command_mkgrp .)
    MKFILE          reduce using rule 13 (commands -> command_mkgrp .)
    CAT             reduce using rule 13 (commands -> command_mkgrp .)
    REP             reduce using rule 13 (commands -> command_mkgrp .)
    $end            reduce using rule 13 (commands -> command_mkgrp .)


state 14

    (14) commands -> command_rmgrp .

    EXECUTE         reduce using rule 14 (commands -> command_rmgrp .)
    MKDISK          reduce using rule 14 (commands -> command_rmgrp .)
    RMDISK          reduce using rule 14 (commands -> command_rmgrp .)
    FDISK           reduce using rule 14 (commands -> command_rmgrp .)
    MOUNT           reduce using rule 14 (commands -> command_rmgrp .)
    UNMOUNT         reduce using rule 14 (commands -> command_rmgrp .)
    MKFS            reduce using rule 14 (commands -> command_rmgrp .)
    LOGIN           reduce using rule 14 (commands -> command_rmgrp .)
    LOGOUT          reduce using rule 14 (commands -> command_rmgrp .)
    MKGRP           reduce using rule 14 (commands -> command_rmgrp .)
    RMGRP           reduce using rule 14 (commands -> command_rmgrp .)
    MKUSR           reduce using rule 14 (commands -> command_rmgrp .)
    RMUSR           reduce using rule 14 (commands -> command_rmgrp .)
    MKFILE          reduce using rule 14 (commands -> command_rmgrp .)
    CAT             reduce using rule 14 (commands -> command_rmgrp .)
    REP             reduce using rule 14 (commands -> command_rmgrp .)
    $end            reduce using rule 14 (commands -> command_rmgrp .)


state 15

    (15) commands -> command_mkusr .

    EXECUTE         reduce using rule 15 (commands -> command_mkusr .)
    MKDISK          reduce using rule 15 (commands -> command_mkusr .)
    RMDISK          reduce using rule 15 (commands -> command_mkusr .)
    FDISK           reduce using rule 15 (commands -> command_mkusr .)
    MOUNT           reduce using rule 15 (commands -> command_mkusr .)
    UNMOUNT         reduce using rule 15 (commands -> command_mkusr .)
    MKFS            reduce using rule 15 (commands -> command_mkusr .)
    LOGIN           reduce using rule 15 (commands -> command_mkusr .)
    LOGOUT          reduce using rule 15 (commands -> command_mkusr .)
    MKGRP           reduce using rule 15 (commands -> command_mkusr .)
    RMGRP           reduce using rule 15 (commands -> command_mkusr .)
    MKUSR           reduce using rule 15 (commands -> command_mkusr .)
    RMUSR           reduce using rule 15 (commands -> command_mkusr .)
    MKFILE          reduce using rule 15 (commands -> command_mkusr .)
    CAT             reduce using rule 15 (commands -> command_mkusr .)
    REP             reduce using rule 15 (commands -> command_mkusr .)
    $end            reduce using rule 15 (commands -> command_mkusr .)


state 16

    (16) commands -> command_rmusr .

    EXECUTE         reduce using rule 16 (commands -> command_rmusr .)
    MKDISK          reduce using rule 16 (commands -> command_rmusr .)
    RMDISK          reduce using rule 16 (commands -> command_rmusr .)
    FDISK           reduce using rule 16 (commands -> command_rmusr .)
    MOUNT           reduce using rule 16 (commands -> command_rmusr .)
    UNMOUNT         reduce using rule 16 (commands -> command_rmusr .)
    MKFS            reduce using rule 16 (commands -> command_rmusr .)
    LOGIN           reduce using rule 16 (commands -> command_rmusr .)
    LOGOUT          reduce using rule 16 (commands -> command_rmusr .)
    MKGRP           reduce using rule 16 (commands -> command_rmusr .)
    RMGRP           reduce using rule 16 (commands -> command_rmusr .)
    MKUSR           reduce using rule 16 (commands -> command_rmusr .)
    RMUSR           reduce using rule 16 (commands -> command_rmusr .)
    MKFILE          reduce using rule 16 (commands -> command_rmusr .)
    CAT             reduce using rule 16 (commands -> command_rmusr .)
    REP             reduce using rule 16 (commands -> command_rmusr .)
    $end            reduce using rule 16 (commands -> command_rmusr .)


state 17

    (17) commands -> command_mkfile .

    EXECUTE         reduce using rule 17 (commands -> command_mkfile .)
    MKDISK          reduce using rule 17 (commands -> command_mkfile .)
    RMDISK          reduce using rule 17 (commands -> command_mkfile .)
    FDISK           reduce using rule 17 (commands -> command_mkfile .)
    MOUNT           reduce using rule 17 (commands -> command_mkfile .)
    UNMOUNT         reduce using rule 17 (commands -> command_mkfile .)
    MKFS            reduce using rule 17 (commands -> command_mkfile .)
    LOGIN           reduce using rule 17 (commands -> command_mkfile .)
    LOGOUT          reduce using rule 17 (commands -> command_mkfile .)
    MKGRP           reduce using rule 17 (commands -> command_mkfile .)
    RMGRP           reduce using rule 17 (commands -> command_mkfile .)
    MKUSR           reduce using rule 17 (commands -> command_mkfile .)
    RMUSR           reduce using rule 17 (commands -> command_mkfile .)
    MKFILE          reduce using rule 17 (commands -> command_mkfile .)
    CAT             reduce using rule 17 (commands -> command_mkfile .)
    REP             reduce using rule 17 (commands -> command_mkfile .)
    $end            reduce using rule 17 (commands -> command_mkfile .)


state 18

    (18) commands -> command_cat .
